adding html, css - and js for toggle section

--- a/index.html
+++ b/index.html
@@ -3,12 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Link rel="stylesheet" href="./style.css"></Link>
+    <Link rel="stylesheet" href="./style.css"></Link><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/95ac2bc96d.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <title>Gifts</title>
 </head>
 <body>
-    
+<nav>
+    <!--Nav bar-->
+        <div class="logo"><i class="fa-solid fa-gift"></i> Gift Shop</div>
+        <div class="toggle"></div>
+        <div class="navigation">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="social-bar">
+                <ul>
+                    <li>
+                        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-brands fa-square-pinterest"></i></a>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+<!--Search bar-->
+    <section>
+        <div class="search-bar">
+            <input type="text">
+            <!--needs:
+            seller box, max price box, search, clear-->
+        </div>
+    </section>
+<!--Main products section-->
+    <main class="products-section">
+        <div class="title">
+            <h1>Gifts</h1>
+        </div>
+        <div class="products">
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+            <div class="product-card">
+                <div class="image">
+                    <img src="https://www.houseofdisaster.com/cdn/shop/products/SEA-JUG-3_99_1000x.jpg?v=1663764035" alt="">
+                </div>
+                <h2>Product Name</h2>
+                <h3>Seller</h3>
+                <h4>Price</h4>   
+            </div>
+        </div>
+    </main>
+        
+   
 
+<footer>
+
+</footer>
+   
     <script src="./main.js"></script>
 </body>
 </html>
